--- a/views/fahrraeder.ejs
+++ b/views/fahrraeder.ejs
@@ -1,53 +1,102 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
-<%- include("partials/header") %>
+  <% if (loggedin) { %>
+    <%- include("partials/secondaryHeader") %> <% } else { %> <%- include("partials/header") %> <% } %>
+
+<%- include("partials/goToTop") %>
+
+ 
 
 <body>
 
+ 
+
   <section id="pricing">
 
-    <div class="jumbotron "style="" id="test">
-        <div class="container-fluid">
+ 
 
-            <div class="card-deck">
-                <% data.forEach(function(item){ %>
-                <div class="col-lg-4 col-md-6 " style="margin-bottom: 25px;"> 
-                <div class="card">
-                  <a href="/product/?name=<%= item.name%>">
-                    <div class="card-header bg-secondary">
-                      <img class="card-img-bottom" src="<%= item.photo %>" alt="movie1"/>
-                        <h5 class="card-title text-white"><%= item.name %></h5>
-                      </a>
-                    </div>
-                    <div class="card-body bg-secondary">
-                        <p class="card-text text-white">In den Größen</p>
-                    </div>
-                </div>
-                </div>
-                    <% } ); %>
+    <div class="jumbotron" id="test">
+
+      <div class="container-fluid">
+
+ 
+
+        <div class="card-deck">
+
+          <% data.forEach(function(item){ %>
+
+          <div class="col-lg-3 col-md-6 ">
+
+            <div class="card m-1">
+
+              <a class="text-dark text-center" href="/product/?name=<%= item.name%>">
+
+                <div class="card-header">
+
+                  <img class="card-img-top" src="<%= item.bildpfad %>" alt="movie1" />
+
+                  <h5 class="card-title mt-2"><%= item.name %></h5>
+
+              </a>
+
             </div>
+
+           
+
+            <div class="card-body bg-secondary">
+
+              <p class="card-text text-white"><%= item.beschreibung %></p>
+
+            </div>
+
+          </div>
+
         </div>
+
+        <% } ); %>
+
+      </div>
+
     </div>
-</section>
 
-<button>Press</button>
+    </div>
 
-<!-- <script>
+  </section>
+
+ 
+
+  <button>Press</button>
+
+ 
+
+  <!-- <script>
+
   $(function() {
 
+ 
+
     $("button").on("click", function () {
+
       $.ajax({
+
       type: 'GET',
+
       url: '/fahrraeder',
+
       success: function(result) {
+
          $('#test').html(result);
+
       }
+
     });
+
   })
 
-});
-</script> -->
-    
  
-</body>
+
+});
+
+</script> -->
