--- a/views/check.ejs
+++ b/views/check.ejs
@@ -1,7 +1,7 @@
-<% if (loggedin) {%>
-    <%-include("partials/secondaryHeader") %> <%} else {%> <%-include("partials/header") %> <%} %>
-  
-  <%- include("partials/goToTop") %> 
+<% if (loggedin) { %>
+    <%- include("partials/secondaryHeader") %> <% } else { %> <%- include("partials/header") %> <% } %>
+
+<%- include("partials/goToTop") %>
 
 <aside>
     <div id="wrapper">    
@@ -17,7 +17,7 @@
                 <div class="process-wrap">
                     <div class="process text-center active">
                         <p><span calss="icon"><i class="icon-search2"></i></span></p>
-                        <h3>Sitzplatzauswahl</h3>
+                        <h3>Fahrradauswahl</h3>
                     </div>
                     <div class="process text-center active">
                         <p><span calss="icon"><i class="icon-dollar-sign"></i></span></p>
@@ -36,8 +36,8 @@
             <div class="col-md-12 col-md-offset-1 text-center" style="margin-top: 10px;">
                 <span class="icon"><i class="icon-shopping-cart"></i></span>
                 <h2>Vielen Dank für ihre Buchung! </h2>
-                <h4>Eine E-Mail mit ihren Tickets wurde an ihre Mailadresse versandt.</h4>
-                <!--<h4>Sie können die Tickes auch als PDF herunterladen und drucken</h4> -->
+                <h4>Eine E-Mail mit ihren Tickets wurde an ihre Mailadresse versandt.</h4> 
+                <!--<h4>Sie können die Tickes auch als PDF herunterladen und drucken</h4>  -->
                 
                     <div lass="col-md-12 col-md-offset-1 text-center">
                     <a href="/"><button class ="checkout" style="color:black">Zur Startseite</button></a>
