--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,11 +2,11 @@
 
 
 <div class="contact-wrap" style="width:60%;margin-right:auto;margin-left:auto;">
-	<h1 class="text-light"><%= login %></h1>
+	<h1 class="text-light"></h1>
 		<br>
 		<form method="post">
-			<input class="form-control inputEmail" name="username" placeholder="E-mail" type="email" id="email" /><br> <!-- Eingabe Benutzername -->
-			<input class="form-control inputEmail" name="password" placeholder="Passwort" type="password" id="password" /><br> <!-- Eingabe Passwort -->
+			<input class="form-control inputEmail" name="username" placeholder="E-mail" type="email" id="username" /><br> <!-- Eingabe Benutzername -->
+			<input class="form-control inputEmail" name="passwordLog" placeholder="Passwort" type="password" id="passwordLog" /><br> <!-- Eingabe Passwort -->
 			<br>
 			<input name="cookie" type="checkbox" value="ja"/> Angemeldet bleiben&#063;<br/><br> 
 			<input class="btn btn-primary" id="log" type="submit" name="xsubmit" value="Anmelden" /><br><br> <!-- Anmelden: submit button -->
