--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,18 +14,6 @@
               <span class="navbar-toggler-icon"></span></button>
           <div class="collapse navbar-collapse"id="navcol-1">
               <ul class="nav navbar-nav">
-                <li role="presentation" class="nav-item">
-                  <div class="dropdown">
-                      <a class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="/fahrraeder">
-                        Marken
-                      </a>
-                      <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="/fahrraeder/?katid=1">Bulls</a>
-                        <a class="dropdown-item" href="/fahrraeder/?katid=2">KTM</a>
-                        <a class="dropdown-item" href="/fahrraeder/?katid=3">Test</a>
-                      </div>
-                    </div>
-              </li>
                   <li role="presentation" class="nav-item">
                       <div class="dropdown">
                           <a class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="/fahrraeder">
@@ -61,18 +49,32 @@
               <ul ul class="nav navbar-nav mx-auto">
                 
                   <form class="form-inline " action="/fahrraeder" method="POST">
-                <input name="datepickerFrom" id="datepickerFrom"/>
+                <input name="datepickerFrom" id="datepickerFrom" readonly/>
                                 <script>
                                     $('#datepickerFrom').datepicker({
-                            uiLibrary: 'bootstrap4'
-                          });
+                                      format: 'dd/mm/yyyy',
+                                      uiLibrary: 'bootstrap4',
+                                      ignoreReadonly: true,
+                                        keyBinds: {
+                                            'delete': function () {
+                                            return false;
+                                            }
+                                        }
+                                      });
                     </script>
               
                  
-                <input id="datepickerTo" name="datepickerTo"/>
+                <input id="datepickerTo" name="datepickerTo" readonly/>
                   <script>
                       $('#datepickerTo').datepicker({
-                      uiLibrary: 'bootstrap4'
+                        format: 'dd/mm/yyyy',
+                      uiLibrary: 'bootstrap4',
+                      ignoreReadonly: true,
+                                        keyBinds: {
+                                            'delete': function () {
+                                            return false;
+                                            }
+                                        }
                                   });
                   </script>
                  
