--- a/views/partials/secondaryHeader.ejs
+++ b/views/partials/secondaryHeader.ejs
@@ -1,63 +1,100 @@
 <!doctype html>
 <html lang="en">
 
- <%- include('inits')%>
-
+  <%- include('inits')%>
 <body>
 
-  <section id="title">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="/">CineWorld</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <nav class="navbar navbar-light navbar-expand-md">
+      <div class="container-fluid">
+          <a class="navbar-brand" href="/">BikeWorld</a>
+          <button data-toggle="collapse" data-target="#navcol-1" class="navbar-toggler">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="navbar-toggler-icon"></span></button>
+          <div class="collapse navbar-collapse"id="navcol-1">
+              <ul class="nav navbar-nav">
+                  <li role="presentation" class="nav-item">
+                      <div class="dropdown">
+                          <a class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="/fahrraeder">
+                            Fahrräder
+                          </a>
+                          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                            <a class="dropdown-item" href="/fahrraeder/?katid=1">Mountainbike</a>
+                            <a class="dropdown-item" href="/fahrraeder/?katid=2">Trekkingrad</a>
+                            <a class="dropdown-item" href="/fahrraeder/?katid=3">Crossrad</a>
+                          </div>
+                        </div>
+                  </li>
+                  <li role="presentation" class="nav-item">
+                      <div class="nav-item dropdown" aria-labelledby="dropdownMenuButton">
+                          <button data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" type="button" class="btn btn-primary dropdown-toggle" href="#">E-Bikes</button>
+                          <div role="menu" class="dropdown-menu">
+                              <a role="presentation" class="dropdown-item" href="#">E-Mountainbike</a>
+                              <a role="presentation" class="dropdown-item" href="#">E-Trekking</a>
+                              <a role="presentation" class="dropdown-item" href="#">E-Cross</a></div>
+                      </div>
+                  </li>
+                  <li role="presentation" class="nav-item">
+                      <div class="nav-item dropdown">
+                          <button data-toggle="dropdown" aria-expanded="false" type="button" class="btn btn-primary dropdown-toggle" href="#">Zubehör</button>
+                          <div role="menu" class="dropdown-menu">
+                              <a role="presentation" class="dropdown-item" href="#">Kinderträger</a>
+                              <a role="presentation" class="dropdown-item" href="#">Helme</a>
+                              <a role="presentation" class="dropdown-item" href="#">Dinge</a></div>
+                      </div>
+                  </li>
+              </ul>
+              
+              <ul ul class="nav navbar-nav mx-auto">
+                
+                  <form class="form-inline " action="/fahrraeder" method="POST">
+                <input name="datepickerFrom" id="datepickerFrom" readonly/>
+                                <script>
+                                    $('#datepickerFrom').datepicker({
+                                      format: 'dd-mm-yyyy',
+                                      uiLibrary: 'bootstrap4'
+                                      });
+                    </script>
+              
+                 
+                <input id="datepickerTo" name="datepickerTo" readonly/>
+                  <script>
+                      $('#datepickerTo').datepicker({
+                        format: 'dd-mm-yyyy',
+                      uiLibrary: 'bootstrap4'
+                                  });
+                  </script>
+                 
+              </ul>
+            
+              <ul class="navbar-nav mx-auto">
+                <li class="nav-item">
+                    <div>
 
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="/films">Programm</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/pricing">Preisliste</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/contact">Kontakt</a>
-          </li>
-        </ul>
-          <ul class="navbar-nav mx-auto">
-          <li class="nav-item">
-            <div class="" id="divSearch">
-              <form  class="form-inline" method="post" action="/searchBar">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Suche..." aria-label="Suche...">
-                        <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Suche</button>
-                  </form> 
-            </div>
-          </li>
-        </ul>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-
-          <%if(session.cart && session.cart.totalQy > 0){%>
-
-          <li class="nav-item">
-            <a class="nav-link" href="/cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Warenkorb
-                <span class="badge"> <%- session.cart.totalQy %>  </span>
-            <%} %>
-          </a></li>
+                      <input class="btn btn-primary" name="submit" type="submit" value="Suche verfügbare Räder" /> 
+                        <!-- <form class="form-inline">
+                            
+                                <input type="text" class="form-control form-control mr-sm-2" />
+                                <button class="btn btn-outline-warning my-2 my-sm-0" type="submit">Suche</button>
+            
+                        </form> -->
+                    </div>
+                </li>
+              </form> 
+            </ul>
 
 
-          <li class="nav-item">
-            <div class="">
-              <a class="btn btn-dark btn-lg" href="/logout" role="button">Logout</a>
-            </div>
-          </li>
 
-
-        </ul>
-
+              <ul class="navbar-nav ml-auto">
+                  <li class="nav-item">
+                      <div class="">
+                          <a class="btn btn-outline-warning my-2 my-sm-0 btn-lg" href="/logout" role="button">Logout</a>
+                      </div>
+                  </li>
+              </ul>
+          </div>
       </div>
-    </nav>
-
-  </section>
+  </nav>
+  
 </body>
+</html>
