--- a/views/product.ejs
+++ b/views/product.ejs
@@ -1,4 +1,5 @@
-<%- include("partials/header") %>
+<% if (loggedin) { %>
+    <%- include("partials/secondaryHeader") %> <% } else { %> <%- include("partials/header") %> <% } %>
 
 <%- include("partials/goToTop") %>
 
@@ -6,10 +7,8 @@
 <html lang="en">
 
 <head>
-    <title><%= data[0].name %></title>
+    <title><%= data[0].Pname %></title>
 </head>
-
-
 
 <body>
 
@@ -29,14 +28,87 @@
 
                             <div class="col-md-7">
                                 <div class="desc" style="margin-top: 10%; text-align: left; font-size: 15px;">
-                                    <h3><%= data[0].name %></h3>
-                                    <p><%= data[0].hid %></p>
+                                    <h3><%= data[0].Pname %></h3>
+                                    <p><%= data[0].Hname %></p>
                                     <p><b>Preis:</b><br><%= data[0].preis %>€</p>
 
                                     <b>Beschreibung: </b><br>
-                                    <p><i><%= data[0].beschreibung %></i><br/>
-                                        </p>
-                                    <a class="btn btn-outline-warning my-2 my-sm-0 btn-lg" href="/add-to-Cart/?pid= <%=data[0].pid%>" role="button">In den Waarenkorb</a>
+                                    <p><i><%= data[0].beschreibung %></i><br/></p>
+
+                                <form method="post"  action="/add-to-Cart/?pid=<%=data[0].pid%>">
+
+                                    <% if (vonBis == null) { %>
+
+                                    <input id="datepickerFromProduct" name="datepickerFromProduct" readonly/>
+
+                                   <% } else { %>
+                                    
+                                    <input id="datepickerFromProduct" name="datepickerFromProduct" value="<%=vonBis.from%>" readonly/>
+                                    <% } %>
+                                        <script>
+                                            $('#datepickerFromProduct').datepicker({
+                                            format: 'dd/mm/yyyy',
+                                            uiLibrary: 'bootstrap4',
+                                            ignoreReadonly: true,
+                                            keyBinds: {
+                                                'delete': function () {
+                                                return false;
+                                                }
+                                            }
+                                            });
+                                    </script>
+
+                                    
+
+                                    <% if (vonBis == null) { %>
+
+                                    <input id="datepickerToProduct" name="datepickerToProduct" readonly/>
+
+                                    <% } else { %>
+    
+                                    <input id="datepickerToProduct" name="datepickerToProduct" value="<%=vonBis.to%>" readonly/>
+                                    <% } %>
+
+                                    <script>
+                                        $('#datepickerToProduct').datepicker({
+                                        format: 'dd/mm/yyyy',
+                                        uiLibrary: 'bootstrap4',
+                                        ignoreReadonly: true,
+                                        keyBinds: {
+                                            'delete': function () {
+                                            return false;
+                                            }
+                                        }
+                                        });
+
+                                    /*function checkInputValue(){
+
+                                    // Selecting the input element and get its value 
+
+                                    var inputValFrom = document.getElementById("datepickerFromProduct").value;
+                                    var inputValTo = document.getElementById("datepickerToProduct").value;
+
+                                    var isCorrectFrom=false;
+                                    var isCorrectTo=false;
+
+                                    if (inputValFrom.charAt(2) == '/' && inputValFrom.charAt(5) == '/' && inputValTo.charAt(2) == '/' && inputValTo.charAt(5) == '/') {
+                                        isCorrectFrom = true;
+                                        isCorrectTo = true;
+                                    }
+
+                                    if (isCorrectFrom && isCorrectTo) {
+                                        alert("Correct")
+                                    }else 
+
+                                    alert("Wrong input");
+
+                                }*/
+
+                                    </script>
+
+
+                                    <input s="btn btn-outline-warning my-2 my-sm-0 btn-lg" id="log" type="submit" name="xsubmit" value="In den Warenkorb" />
+                                </form>
                                 </div>
                                 <!-- Verfügbarkeitstabelle-->
                             </div>
