--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,7 @@
 <!-- footer section -->
 <section id="footer" style="background-color: #4b4b4b;">
   <footer id="colorlib-footer" role="contentinfo">		
-    <div class="copy">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-md-12 text-center">
           <i style="color: cornsilk" class="footer-icon fab fa-twitter foot-resizing"><a href="www.google.com"></a></i>
@@ -18,7 +18,5 @@
       </div>
     </div>
   </footer>
-  </section>
-  </body>
-  
-  </html>
+</section>
+ 
