--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -2,40 +2,62 @@
     <%- include("partials/secondaryHeader") %> <% } else { %> <%- include("partials/header") %> <% } %>
 
 <%- include("partials/goToTop") %>
-    <div class="row" style="margin-top: 25px;">
-        <div class="mx-auto" id="test">
-            <ul class="list-group">
-                <% data.forEach(function(item){ %>
-                <li class="list-group-item">
-                <span class="badge"><%= item.anzahl%></span> <!-- Aus Query als Count nehmen-->
-                <strong><%= item.name%></strong><br>
-                <strong>Von <%= item.vonDay%>/<%= item.vonMonth%>/<%= item.vonYear%> bis <%= item.bisDay%>/<%= item.bisMonth%>/<%= item.bisYear%>     <%=item.DateDiff%></strong> <!-- Aus Query nehmen-->
-                <span class="label label-success"><%= item.preis%>€</span> 
-                <div class="btn-group">
-                    <a href="/reduce/?pid=<%=item.pid%>"><button class="btn btn-warning btn-xs" type="button" >Entferne Buchung</button></a>
-                </div>
-                </li>
-                    <% } ); %>
-            </ul>
-            </br>
 
+<div class="container">
+    <h3 class="text-center text-dark">Warenkorb</h3>
+<div class="row align-items-center">
+<div class="col-sm">Foto</div>
+<div class="col-sm">Produkt</div>
+<div class="col-sm">Von</div>
+<div class="col-sm">Bis</div>
+<div class="col-sm">Anzahl Tage</div>
+<div class="col-sm">Preis pro Tag</div>
+<div class="col-sm">Entfernen</div>
+</div>
+    <% data.forEach(function(item){ %>
+    <div class="row align-items-center border">
+      <div class="col-sm">
+        <img class="img-fluid" src="/images/mtb/1.jpg">
+      </div>
+      <div class="col-sm">
+        <%= item.name%>
+      </div>
+      <div class="col-sm">
+        <%= item.vonDay%>/<%= item.vonMonth%>/<%= item.vonYear%>
+      </div>
+      <div class="col-sm">
+        <%= item.bisDay%>/<%= item.bisMonth%>/<%= item.bisYear%>     
+      </div>
+      <div class="col-sm">
+        <%=item.DateDiff%>
+      </div>
+      <div class="col-sm">
+        <%= item.preis%>€
+      </div>
+      <div class="col-sm">
+        <div class="btn-group">
+            <a href="/reduce/?pid=<%=item.pid%>"><button class="btn btn-danger btn-xs" type="button" >Entferne Buchung</button></a>
         </div>
+      </div>
     </div>
-
-    <div class="row">
-        <div class="mx-auto">
-            <strong></strong>
-        </div>
-    </div>
-
-    <hr>
-    <% if (data.length > 0) { %>
-    <div class="row" style="float: right; margin-right: 2.5%;">
+    <% } ); %>
+<br>
+    <div class="row align-items-center justify-content-between">
+      <div class="col-sm">
         <form method="POST" action="/payment">
-            <input type="submit" value="Mit PayPal Bezahlen" name="bsubmit" class="checkout"
-                   style="color:black"><!-- ohne Produkte im Warenkorb kein Einkauf -->
-        </form>
+          <input type="submit" value="Zurück zum Produkt" name="bsubmit" class="btn btn-success">
+      </form>
+      </div>
+      <div class="col-sm text-right">
+        <% if (data.length > 0) { %>
+    
+          <form method="POST" action="/payment">
+              <input type="submit" value="Mit PayPal Bezahlen" name="bsubmit" class="btn btn-warning">
+          </form>
+      <%}%>
+      </div>
     </div>
-    <%}%>
+  </div>
+  <br>
 
 <%-include("partials/footer") %>
