--- a/views/check.ejs
+++ b/views/check.ejs
@@ -5,7 +5,7 @@
 
 <aside>
     <div id="wrapper">    
-        <div id="yourdiv"><h1>Bezahlung</h1></div>
+        <div class="text-center"><h1>Erfolgreich abgeschlossene Bezahlung</h1></div>
     </div>
 </aside>
 
@@ -31,75 +31,26 @@
                 </div>
             </div>
         </div>
-
+        <br>
+        <div class="container">
         <div class="row">
             <div class="col-md-12 col-md-offset-1 text-center" style="margin-top: 10px;">
                 <span class="icon"><i class="icon-shopping-cart"></i></span>
                 <h2>Vielen Dank für ihre Buchung! </h2>
-                <h4>Eine E-Mail mit ihren Tickets wurde an ihre Mailadresse versandt.</h4> 
+                <h4>Ihre Buchung ist abgeschlossen, die Räder sind reserviert</h4> 
                 <!--<h4>Sie können die Tickes auch als PDF herunterladen und drucken</h4>  -->
                 
                     <div lass="col-md-12 col-md-offset-1 text-center">
-                    <a href="/"><button class ="checkout" style="color:black">Zur Startseite</button></a>
-                    <!--<a href="/qrcode" id="gen"><button class ="checkout" style="color:black">Ticket als PDF</button></a> Verlinkung zu Downloads-->
-                    <a href="/films"><button class ="checkout" style="color:black">Zu den Filmen</button></a>
+                    <a href="/"><button class ="btn btn-warning" style="color:black">Zur Startseite</button></a>
+                    <a href="/gutschein" id="gen"><button class ="btn btn-warning" style="color:black">Gutschein</button></a>
+                    <a href="/fahrraeder"><button class ="btn btn-warning" style="color:black">Zu den Fahrrädern</button></a>
                 </div>
             </div>
         </div>
     </div>
 </div>
-
-
-
-
-
-<div class="row justify-content-center">
-    <div class="col-md-6 align-self-center" style="margin-top: 20px;margin-bottom:5px;margin-left: 30%;">
-
-        <img src="" id="qr-code-img" class="img-responsive text-center d-none" alt="Image">
-
-    </div>
 </div>
-</div>
-
-
-<script
-        src="//stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-        integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"
-></script>
-
-
-
-
-<script>
-    document.querySelector('#gen').addEventListener('click', function () {
-        // Get the text from input
-        let txt = document.querySelector('#input_text').value;
-
-        // Do not send request if field is empty
-        if(txt !== ''){
-            var xhttp = new XMLHttpRequest();
-            xhttp.onreadystatechange = function () {
-                if (this.readyState == 4 && this.status == 200) {
-                    console.log(this.responseText.qr_img);
-                    let res = JSON.parse(this.responseText);
-                    let img = document.querySelector('#qr-code-img');
-                    // Set img source
-                    img.src = res.qr_img;
-
-                    // Show the image
-                    img.classList.remove('d-none');
-
-                }
-            };
-            xhttp.open("POST", "/qrcode", true);
-            xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-            xhttp.send("qr_text=" + txt);
-        }
-
-    });
-</script>
+<br>
 
   
 <%- include("partials/footer") %>
