--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,93 +1,93 @@
-
 <% if (loggedin) { %>
-    <%- include("partials/secondaryHeader") %> <% } else { %> <%- include("partials/header") %> <% } %>
+<%- include("partials/secondaryHeader") %> <% } else { %> <%- include("partials/header") %> <% } %>
 
 <%- include("partials/goToTop") %>
-<!--<h3>This is a test</h3>
 
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
-    
-    <ol class="carousel-indicators">
-        <% var i=0;%>
-        <% data.forEach(function(item){%>
-            <%if (i==0){%>
-        <li data-target="#myCarousel" data-slide-to="<%=i%>" class="active"></li>
-        <%}else{%>
-        <li data-target="#myCarousel" data-slide-to="<%=i%>"></li>
-        <%}%>
 
-    <%i++;})%>
-    </ol>
-  
-    
-    <div class="carousel-inner">
-        <% var j=0;%>
-        <% data.forEach(function(item){%>
-            <%if (j==0){%> 
-                <div class="item active">
-            <%}else{%>
-                <div class="item">
-          <%}%>
-            <img src="<%=item.bildpfad%>" alt="Chania">
-                <div class="carousel-caption">
-                <h1>Los Angeles</h1>
-                <p>LA is always so much fun!</p>
-        </div>
-      </div>
-    <%j++;})%>
-
-    </div>
-  
-    
-    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div> -->
-
-  <!-- Highlight section -->
-<section id="highlight" style="background-image: url(/images/bg.png);">
+<!-- Highlight section -->
+<section id="highlight">
     <br>
-      <h2 class="text-white">Highlights in der CineWorld Mannheim</h2>
-      <!-- carousel-->
-      <div id="highlightSlide" role="listbox" class="carousel slide carousel-fade d-block w-50 mx-auto" data-ride="carousel">
-          <ol class="carousel-indicators">
-        <% var i=0;%>
-        <% data.forEach(function(item){%>
+    <h2 class="text-black text-center mt-5">Highlights in der BikeWorld Mannheim</h2>
+    <!-- carousel-->
+    <div id="highlightSlide" role="listbox" class="carousel slide carousel-fade d-block w-50 mx-auto"
+        data-ride="carousel">
+        <ol class="carousel-indicators">
+            <% var i=0;%>
+            <% data.forEach(function(item){%>
             <%if (i==0){%>
-        <li data-target="#myCarousel" data-slide-to="<%=i%>" class="active"></li>
-        <%}else{%>
-        <li data-target="#myCarousel" data-slide-to="<%=i%>"></li>
-        <%}%>
+            <li data-target="#myCarousel" data-slide-to="<%=i%>" class="active"></li>
+            <%}else{%>
+            <li data-target="#myCarousel" data-slide-to="<%=i%>"></li>
+            <%}%>
 
     <%i++;})%>
-</ol>
-<div class="carousel-inner">
+        </ol>
+        <div class="carousel-inner">
             <% var j=0;%>
-            <% data.forEach(function(item){%> 
-                <%if (j==0){%> 
-                    <div class="carousel-item active">
+            <% data.forEach(function(item){%>
+            <%if (j==0){%>
+            <div class="carousel-item active">
                 <%}else{%>
-                    <div class="carousel-item">
-              <%}%>
-              <a href="/product/?name=<%= item.name%>"><img src="<%=item.bildpfad%>" class="d-block w-100 p-3 mx-auto" alt="..."></a>
-        </div> <!--Item close-->
-        <%j++;})%></div> <!-- inner close-->
-    
+                <div class="carousel-item">
+                    <%}%>
+              <a href="/product/?name=<%= item.name%>"><img src="<%=item.bildpfad%>" class="d-block w-75 p-3 mx-auto"
+                        alt="..."></a>
+                </div>
+                <!--Item close-->
+                <%j++;})%></div> <!-- inner close-->
 
-          <a class="left carousel-control-prev mx-auto" href="#highlightSlide" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-          </a>
-          <a class="right carousel-control-next mx-auto" href="#highlightSlide" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-          </a>
-      </div>
-  
-  </section>
+
+            <a class="left carousel-control-prev mx-auto" style="fill:red" href="#highlightSlide" role="button"
+                data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control-next mx-auto text-dark" href="#highlightSlide" role="button"
+                data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+
+</section>
+
+<section id="contact">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-sm">
+                <canvas id="my_canvas"></canvas>
+            </div>
+            <div class="col-sm">
+                <h3>Wilkommen auf der Website der Mannheimer BikeWorld!</h3>
+                <p>Wir sind lokalisiert am Ufer des Neckars, unsere Fahrradauswahl umfasst Mountainbikes, Trekking-Bikes und City-Bikes, wahlweise auch mit Motor.</p>
+                <p>Die Preise belaufen sich dabei von 4€ bis 12€ pro Tag und Fahrrad.</p>
+                <p>Aus gegebenem Anlass akzeptieren wir zur Zeit kein Bargeld und alle Zahlungen werden über PayPal abgeschlossen!</p>
+            </div>
+
+        </div>
+    </div>
+    <script>
+        pdfjsLib.getDocument('/images/map.pdf').then(doc => {
+            doc.getPage(1).then(page => {
+                var myCanvas = document.getElementById("my_canvas");
+                var context = myCanvas.getContext("2d");
+
+
+
+                var viewport = page.getViewport(1);
+                myCanvas.width = viewport.width;
+                myCanvas.height = viewport.height;
+
+
+
+                page.render({
+                    canvasContext: context,
+                    viewport: viewport,
+                })
+            })
+        })</script>
+
+</section>
+
+<%- include('partials/footer') %>
