--- a/views/partials/inits.ejs
+++ b/views/partials/inits.ejs
@@ -26,7 +26,7 @@
     crossorigin="anonymous"></script>
     <script src="https://unpkg.com/gijgo@1.9.13/js/gijgo.min.js" type="text/javascript"></script>
     <link href="https://unpkg.com/gijgo@1.9.13/css/gijgo.min.css" rel="stylesheet" type="text/css" />
-
+    <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@2.3.200/build/pdf.min.js"></script>
 
   <title>BikeWorld</title>
 </head>
