--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,31 +1,30 @@
 <%- include("partials/headerSignon") %>
-<div class="contact-wrap" style="width:60%;margin-right:auto;margin-left:auto;">
-  <h1 class="text-light">Registrierung</h1>
-  <form class="form-group" action="/register" method="POST">
-  
-    <!-- Eingabefelder -->
-    <input class="form-control" name="name" type="text" placeholder="Benutzername" /> 
+<div class="contact-wrap" style="width:30%;margin-right:auto;margin-left:auto;">
+  <h1 class="text-dark text-center">Registrierung</h1>
+
+  <div class="container bg-light rounded">
+    <form class="form-group" action="/register" method="POST">
+
+      <!-- Eingabefelder -->
+      <br>
+      <input class="form-control" name="name" type="text" placeholder="Benutzername" />
       <input class="form-control" name="vorname" type="text" placeholder="Vorname" />
       <input class="form-control" name="nachname" type="text" placeholder="Nachname" />
-      <input class="form-control" name="email" type="email" placeholder="E-Mail Adresse" /> 
-      
-      <input class="form-control" name="plz" type="text" placeholder="Postleitzahl" />
-      <input class="form-control" name="ort" type="text" placeholder="Wohnort" />
-      <input class="form-control" name="strasse" type="text" placeholder="Strasse" />
-      <input class="form-control" name="hausnr" type="text" placeholder="Hausnummer" />
-      <input class="form-control" name="konto" type="text" placeholder="IBAN" />
-      <input class="form-control" name="institut" type="text" placeholder="Institut" />
-      
-    <input class="form-control" name="password" type="password" placeholder="Passwort" /> 
-      <input class="form-control" name="pass2" type="password" placeholder="Passwort wiederholen" /> 
+      <input class="form-control" name="email" type="email" placeholder="E-Mail Adresse" />
       <br>
-    <input class="btn btn-primary" name="submit" type="submit" value="Registrieren" /><br><br> <!-- submitbutton -->
-      
-      <a href="../login" >Schon registriert?</a> <!-- Verlinkung: zum Login zurück -->
-  </form>
-  
-  
+
+      <input class="form-control" name="password" type="password" placeholder="Passwort" />
+      <input class="form-control" name="pass2" type="password" placeholder="Passwort wiederholen" />
+      <br>
+      <input class="btn btn-primary" name="submit" type="submit" value="Registrieren" /><br><br> <!-- submitbutton -->
+
+      <a href="../login">Schon registriert?</a> <!-- Verlinkung: zum Login zurück -->
+      <br>
+      <p class="text-light">Schon registriert?</p>
+    </form>
   </div>
+
+</div>
 
 
 
